fix update filters notification style. #2309 AG-20759
Squashed commit of the following:

commit efcf7f23d1ce2c018eec06c2dc2e5751c1b52a67
Merge: fea9ca95d ca9658393
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Nov 30 14:27:08 2023 +0200

    Merge branch 'master' into fix/AG-20759

commit fea9ca95d142ff817f14f4481f513fbfac23fb83
Merge: db3c6a890 694ff7824
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Nov 30 14:08:03 2023 +0200

    Merge branch 'master' into fix/AG-20759

commit db3c6a89055b72e6859b50379cc82aa68e45d611
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Nov 24 18:43:59 2023 +0200

    update changelog

commit 225d6b6f40c534681f839c060b3367b5062f262e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Nov 24 18:42:32 2023 +0200

    fix update filters notification style

--- a/Extension/assets/css/alert-popup.css
+++ b/Extension/assets/css/alert-popup.css
@@ -62,7 +62,8 @@
 
 .adguard-popup-alert__desc {
     font-size: 14px;
-    line-height: 16px;
+    line-height: 24px;
+    font-weight: 400;
     text-align: left;
 }
 
